ndb - bug#46494   Problem was that after an upgrade from 6.3, no default hashmap existed   Patch fixes this by always (silently) adding a "create default hashmap if not exists" to each     create table operation (which works perfectly thx to schema transactions)

Test is committed to 6.3, which as a post-upgrade-test will drop/recreate the table